# homeplanner

./: .ai-rules.yml  .cursorignore  .gitignore  README.md  TODO.md  add_filecodes.py  alembic.ini  analyze_chunk.py  assign_file_codes.py  check_alembic.py  check_tables.py  create_db.py  decode_chunk.py  final_fix.py  fix_binary_logger_calls.py  fix_binary_logger_calls2.py  fix_binary_logger_calls3.py  fix_filecodes.py  fix_remaining.py  generate_file_codes.py  gradlew  pip_version.txt  pyproject.toml  tasks_backup.sql  test_task_edit.html
alembic/: env.py
android/: README.md  build.bat  build.gradle.kts  build.ps1  build.sh  build_release.bat  gradle.properties  install.bat  install_and_run.bat  install_apk.py  install_release.bat  local.properties.template  run.bat  run.ps1  run.sh  settings.gradle.kts  show_test_results.sh  start_emulator.bat  start_emulator.ps1  start_emulator.sh  version.json  wait_and_install.bat
backend/: __init__.py  alembic.ini  backend.log.2026-01-01  backend.log.2026-01-02  backend.log.2026-01-03  backend.log.2026-01-04  backend.log.2026-01-05  backend.log.2026-01-06  backend.log.2026-01-07  backend.log.2026-01-08  backend.log.2026-01-09  backend.log.2026-01-12  backend.log.2026-01-13  backend.log.2026-01-14  backend.log.2026-01-15  backend.log.2026-01-16  backend.log.2026-01-17  backend.log.2026-01-18  backend_errors.log.2026-01-08  backend_errors.log.2026-01-09  backend_errors.log.2026-01-10  backend_errors.log.2026-01-11  backend_errors.log.2026-01-12  backend_errors.log.2026-01-13  backend_errors.log.2026-01-14  backend_errors.log.2026-01-15  backend_errors.log.2026-01-16  backend_errors.log.2026-01-17  binary_chunk_decoder.py  config.py  database.py  debug_log_constants_part1.py  debug_log_constants_part2.py  debug_log_dictionary.py  debug_log_functions.py  homeplanner.db.backup  logging_config.py  main.py  version.json
common/: __init__.py  networking.py  versioning.py
config/: api_version.json  network.json
docs/: ANDROID_ARCHITECTURE.md  ANDROID_CLASS_SPECIFICATION.md  ANDROID_GUIDE.md  ANDROID_REFACTORING.md  ANDROID_USER_GUIDE.md  API.md  ARCHITECTURE_vNext.md  ARTIFACTS_LAYOUT.md  CACHE_STRATEGY_UPDATE_V1.md  CHANGELOG_HISTORY.md  DEVELOPMENT.md  DEVELOPMENT_PLAN_vNext.md  DOCUMENTATION_ANALYSIS_REPORT.md  DOCUMENTATION_CONSISTENCY_REPORT.md  INDEX.md  INTERFACES_CONSISTENCY_REPORT.md  LOGGING_FORMAT.md  LOGGING_IMPLEMENTATION.md  METHODS_CALL_GRAPH.md  MIGRATION_TO_LOCAL_API.md  NOTES.md  OFFLINE_CACHE_NOTES.md  OFFLINE_CLIENT_DESIGN.md  OFFLINE_FIRST_ARCHITECTURE.md  OFFLINE_REQUIREMENTS.md  OFFLINE_SYNC_NOTES.md  OFFLINE_TEST_PLAN.md  PLAN_NETWORK_SETTINGS.md  PLAN_OFFLINE_MODE.md  REFACTORING_ANDROID.md  RULES.md  SYNC_ALGORITHM.md  SYNC_POLICY.md  TASKS_FORMAT.md  TASKS_FORMAT_REVIEW.md  TASK_HISTORY.md  TASK_NOTIFICATION_CONCEPT.md  TASK_RECALCULATION_CONCEPT.md  TESTING_CONVENTIONS.md  VERSIONING.md  (+5 more)
frontend/: api.js  app.js  config.js  config2.js  date_utils.js  filters.js  (+16 more)
(+278 files in other folders)
