[project]
name = "homeplanner"
description = "Планировщик и напоминалка для домашнего использования"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "backend/__init__.py"

[tool.homeplanner.versions]
project_major = "0"
project_minor = "3"

[tool.homeplanner.package_suffixes]
backend = ".0"
frontend = ".0"
android = ".0"
common = ".0"

[tool.homeplanner.api]
# Список поддерживаемых версий API
# Для поддерживаемых версий допустимы исправления багов, но не создание новых функций или удаление
supported_versions = ["0.2", "0.3"]

[tool.hatch.build.targets.wheel]
packages = ["backend", "common"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/version.json",
    "common",
    "config/**/*",
]

# ... остальные настройки без изменений